--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,10 @@
     <title>Kita- Image Finder</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">K I T A</a>
+          <a class="navbar-brand" href="">K I T A</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="explore/">Explore</a>
+                <a class="nav-link" href="/explore">Explore</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/generate">Generate </a>
@@ -33,8 +34,8 @@
                   About
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="about/">About Us</a></li>
-                  <li><a class="dropdown-item" href="documentation/">Documentation</a></li>
+                  <li><a class="dropdown-item" href="/about">About Us</a></li>
+                  <li><a class="dropdown-item" href="/documentation">Documentation</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Copyrights@</a></li>
                 </ul>
